# ufat32

./: .gitignore  CMakeLists.txt  README.md
examples/: example_pool_memory.c  example_pool_memory.h  log_linux_example.c  log_linux_example.h  main_example.c  mock_sd.c  mock_sd.h
include/fat32/: DateTime.h  FAT.h  FAT32.h  block_device.h  debug.h  fat32_alloc.h  fat32_time.h  fat32_types.h  file_utils.h  log.h  log_fat32.h
src/: CMakeLists.txt  DateTime.c  FAT.c  FAT32.c  debug.c  fat32_alloc.c  fat32_time.c  file_utils.c  log_fat32.c  log_linux.c  log_stm.c  log_stub.c  pool_memory.c
tests/: CMakeLists.txt
tests/mocks/: mock_device.cpp  mock_device.hpp
tests/unit/: test_pool_memory.cpp  tests_fat32.cpp  tests_file_utils.cpp
